<resources>
    <string name="app_name">driverConnex</string>
    <string name="title_loading">Loading...</string>
    <string name="title_accept">Accept</string>
    <string name="title_error">Error</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_message">Messages</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_terms">Terms of Service</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_alerts">Vehicle Alerts</string>
    <string name="content_terms">Terms of Service</string>
    <string name="title_activity_policy">Policy</string>
    <string name="content_policy">Default Policy</string>
    <string name="content_help">Help</string>
    <string name="title_activity_login">Login</string>
    <string name="login_positive_button">Register</string>
    <string name="login_negative_button">Log In</string>
    <string name="login_bottom_text">Copyright driverConnex 2014. All rights reserved.</string>
    <string name="signin_first_hint">Email</string>
    <string name="signin_second_hint">Password</string>
    <string name="title_activity_message_view">Message</string>
    <string name="title_activity_policy_view">Default Policy</string>
    <string name="location_services_error">Please turn on Location Services in your System Settings.</string>
    <string name="track_record_title_1">Speed</string>
    <string name="track_record_title_2">Distance</string>
    <string name="track_record_title_3">Duration</string>
    <string name="track_record_title_4">Sharing</string>
    <string name="track_record_speed_unit">mph</string>
    <string name="track_record_distance_unit">miles</string>
    <string name="track_record_title_description">Description</string>
    <string name="track_record_title_start_time">Start time</string>
    <string name="track_record_title_end_time">End time</string>
    <string name="track_record_title_start_date">Start date</string>
    <string name="track_record_title_end_date">End date</string>
    <string name="track_record_title_duration">Duration</string>
    <string name="track_record_title_distance">Distance</string>
    <string name="track_record_title_business">Business</string>
    <string name="track_record_title_expense">Expense</string>
    <string name="track_record_title_start_address">Start address</string>
    <string name="track_record_title_end_address">End address</string>
    <string name="track_record_title_avg_speed">Avg. speed</string>
    <string name="track_record_title_max_speed">Max speed</string>
    <string name="track_record_title_gps_point">GPS points</string>
    <string name="track_record_title_emission">Emissions</string>
    <string name="my_account_title_account">MY ACCOUNT</string>
    <string name="my_account_title_app_details">APP DETAILS</string>
    <string name="my_account_title_user_organisation">ORGANISATION</string>
    <string name="my_account_title_user_group">GROUP</string>
    <string name="my_account_title_name">Name</string>
    <string name="my_account_title_joined">Joined</string>
    <string name="my_account_title_version">Version</string>
    <string name="my_account_title_membership">Membership</string>
    <string name="record_video_cancel">Cancel</string>
    <string name="record_video_retake">Retake</string>
    <string name="record_video_use">Use Video</string>
    <string name="change_password_old_password">Old Password</string>
    <string name="change_password_new_password">New Password</string>
    <string name="change_password_confirm_password">Confirm Password</string>
    <string name="settings_misc">MISC</string>
    <string name="settings_automatic_tracking">Automatic Tracking</string>
    <string name="settings_journey">JOURNEYS</string>
    <string name="settings_expense_per_mile">Expense Per Mile</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm">Confirm</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="statistics_last_month">LAST MONTH</string>
    <string name="statistics_current_month">CURRENT MONTH</string>
    <string name="statistics_averages">AVERAGES</string>
    <string name="statistics_budget">BUDGET</string>
    <string name="statistics_totals">TOTALS</string>
    <string name="statistics_estimates">ESTIMATES</string>
    <string name="statistics_actuals">ACTUALS</string>
    <string name="statistics_costs">COSTS</string>
    <string name="statistics_options_timeframe">DISPLAY TIMEFRAME</string>
    <string name="statistics_spent">Spent</string>
    <string name="statistics_litres">Litres</string>
    <string name="statistics_cost_per_litre">Cost per Litre</string>
    <string name="statistics_day">Day</string>
    <string name="statistics_week">Week</string>
    <string name="statistics_month">Month</string>
    <string name="statistics_year">Year</string>
    <string name="statistics_per_litre">Per Litre</string>
    <string name="statistics_mot_cost">MOT Cost</string>
    <string name="statistics_service_cost">Service Cost</string>
    <string name="statistics_tyre_cost">Tyre Cost</string>
    <string name="statistics_repairs">Repairs</string>
    <string name="statistics_total">Total</string>
    <string name="statistics_mile">Mile</string>
    <string name="statistics_annual_tax">Annual tax</string>
    <string name="statistics_finance">Finance</string>
    <string name="statistics_insurance">Insurance</string>
    <string name="register_first_name_error">Please enter a first name.</string>
    <string name="register_last_name_error">Please enter a last name.</string>
    <string name="register_email_error">Please enter an email.</string>
    <string name="register_password_error">Please enter a password.</string>
    <string name="register_confirm_password_error">Please enter your password again.</string>
    <string name="register_password_match_error">Passwords do not match.</string>
    <string name="register_error">Invalid email</string>
    <string name="journey_error_info">A journey must have at least two locations</string>
    <string name="journey_not_tracking">Not currently tracking</string>
    <string name="journey_view_behaviour">View Behaviour</string>
    <string name="journey_tracking_share">Sharing</string>
    <string name="journey_delete_warning">Are you sure to delete selected journeys?</string>
    <string name="journey_delete_warning2">Are you sure to delete this journey?</string>
    <string name="vehicle_details_title_make">Make</string>
    <string name="vehicle_details_title_model">Model</string>
    <string name="vehicle_details_title_regdate">Reg. date</string>
    <string name="vehicle_details_title_cc">CC</string>
    <string name="vehicle_details_title_colour">Colour</string>
    <string name="vehicle_details_title_body">Body</string>
    <string name="vehicle_details_title_bhp">BHP</string>
    <string name="vehicle_details_title_co2">CO2</string>
    <string name="vehicle_details_title_fuel">Fuel</string>
    <string name="vehicle_details_title_gearbox">Gearbox</string>
    <string name="vehicle_details_title_derivative">Derivative</string>
    <string name="vehicle_details_title_transmission">Transmission</string>
    <string name="vehicle_details_title_ext_urb">Ext.Urb MPG</string>
    <string name="vehicle_details_title_com_mpg">Com. MPG</string>
    <string name="vehicle_details_title_six_month">6 Month RFL</string>
    <string name="vehicle_details_title_year_rfl">year RFL</string>
    <string name="vehicle_details_title_owner">Owner</string>
    <string name="vehicle_details_title_rfl">RFL Expiry</string>
    <string name="vehicle_details_title_service">Service Due</string>
    <string name="vehicle_details_title_emissions">Emissions</string>
    <string name="vehicle_details_title_class">Class</string>
    <string name="vehicle_details_title_bodytype">Body Type</string>
    <string name="vehicle_details_title_taxband">Tax Band</string>
    <string name="vehicle_details_title_enginesize">Engine Size</string>
    <string name="vehicle_details_title_fueltype">Fuel Type</string>
    <string name="vehicle_documentation_title_document">Document</string>
    <string name="vehicle_documentation_title_status">Status</string>
    <string name="vehicle_mpg_quoted">Quoted</string>
    <string name="vehicle_mpg_known">Known</string>
    <string name="vehicle_title_policy_photo">POLICY DOCUMENT PHOTO</string>
    <string name="vehicle_title_invoice_photo">INVOICE PHOTO</string>
    <string name="vehicle_title_serviced_items">SERVICED ITEMS</string>
    <string name="vehicle_title_miles_per_galon">MILES PER GALON</string>
    <string name="vehicle_title_add_vehicle_mileage">MILEAGE</string>
    <string name="vehicle_title_service">Service History</string>
    <string name="vehicle_title_mot">MOT</string>
    <string name="vehicle_title_vehicle_checks">Vehicle Checks</string>
    <string name="vehicle_title_economy">Economy</string>
    <string name="vehicle_title_finance">Finance</string>
    <string name="vehicle_title_tax">Road Tax</string>
    <string name="vehicle_title_insurance">Insurance</string>
    <string name="vehicle_title_cover">Cover</string>
    <string name="vehicle_title_update_date">Enter new date</string>
    <string name="vehicle_title_mileage">Mileage</string>
    <string name="vehicle_title_policy_provider">Provider</string>
    <string name="vehicle_title_policy_number">Policy Number</string>
    <string name="vehicle_title_contact_number">Contact Tel</string>
    <string name="vehicle_title_annual_cost">Annual Cost</string>
    <string name="vehicle_title_expiry">Expiry Date</string>
    <string name="vehicle_title_breakdown_cover">Breakdown Cover</string>
    <string name="vehicle_title_service_type">Type of Service</string>
    <string name="vehicle_title_service_date">Date of Service</string>
    <string name="vehicle_title_service_cost">Cost of Service</string>
    <string name="vehicle_title_vehicle_mileage">Vehicle Mileage</string>
    <string name="vehicle_title_checks">Checks</string>
    <string name="vehicle_title_check_failed">Failed</string>
    <string name="vehicle_title_check_passed">Passed</string>
    <string name="vehicle_title_alerts">Vehicle Alerts</string>
    <string name="vehicle_service_add_item">Tap to add items.</string>
    <string name="add_vehicle_edit_hint">Enter vehicle\'s registration</string>
    <string name="add_vehicle_current_mileage_hint">Vehicle\'s Current Mileage</string>
    <string name="add_vehicle_estimated_annual_mileage_hint">Estimated Annual Mileage</string>
    <string name="vehicle_not_found">No vehicle was found with that registration number.</string>
    <string name="connection_not_found">No Connection found.</string>
    <string name="vehicle_add_info">If no estiamted annual mileage is entered, we will assume that you drive 10,000 miles per year.</string>
    <string name="incidents_witness_name">Name</string>
    <string name="incidents_witness_number">Contact Number</string>
    <string name="incidents_witness_email">Email Address</string>
    <string name="incidents_witness_details">WITNESS DETAILS</string>
    <string name="incidents_witness_statement">STATEMENT</string>
    <string name="incidents_info_request">Please include as much information as possible in your description.</string>
</resources>