<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/secondary_background"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/NormalListTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/statistics_costs" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentTop="true"
                android:background="@color/menu_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_edit_item_bg"
                android:orientation="horizontal"
                android:weightSum="10" >

                <TextView
                    style="@style/ExpenseEditLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="3"
                    android:text="@string/statistics_annual_tax"
                    android:textColor="?attr/list_heading" />

                <TextView
                    android:id="@+id/annualTaxText"
                    style="@style/ExpenseEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:hint="-" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_edit_item_bg"
                android:orientation="horizontal"
                android:weightSum="10" >

                <TextView
                    style="@style/ExpenseEditLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="3"
                    android:text="@string/statistics_finance"
                    android:textColor="?attr/list_heading" />

                <TextView
                    android:id="@+id/financeText"
                    style="@style/ExpenseEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:hint="-" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_edit_item_bg"
                android:orientation="horizontal"
                android:weightSum="10" >

                <TextView
                    style="@style/ExpenseEditLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="3"
                    android:text="@string/statistics_insurance"
                    android:textColor="?attr/list_heading" />

                <TextView
                    android:id="@+id/insuranceText"
                    style="@style/ExpenseEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:hint="-" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical" >

            <TextView
                style="@style/NormalListTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/statistics_budget" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentTop="true"
                android:background="@color/menu_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_edit_item_bg"
                android:orientation="horizontal"
                android:weightSum="10" >

                <TextView
                    style="@style/ExpenseEditLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="3"
                    android:text="@string/statistics_day"
                    android:textColor="?attr/list_heading" />

                <TextView
                    android:id="@+id/budgetDayText"
                    style="@style/ExpenseEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:hint="-" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_edit_item_bg"
                android:orientation="horizontal"
                android:weightSum="10" >

                <TextView
                    style="@style/ExpenseEditLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="3"
                    android:text="@string/statistics_week"
                    android:textColor="?attr/list_heading" />

                <TextView
                    android:id="@+id/budgetWeekText"
                    style="@style/ExpenseEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:hint="-" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_edit_item_bg"
                android:orientation="horizontal"
                android:weightSum="10" >

                <TextView
                    style="@style/ExpenseEditLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="3"
                    android:text="@string/statistics_month"
                    android:textColor="?attr/list_heading" />

                <TextView
                    android:id="@+id/budgetMonthText"
                    style="@style/ExpenseEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:hint="-" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_edit_item_bg"
                android:orientation="horizontal"
                android:weightSum="10" >

                <TextView
                    style="@style/ExpenseEditLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="3"
                    android:text="@string/statistics_year"
                    android:textColor="?attr/list_heading" />

                <TextView
                    android:id="@+id/budgetYearText"
                    style="@style/ExpenseEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:hint="-" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_edit_item_bg"
                android:orientation="horizontal"
                android:weightSum="10" >

                <TextView
                    style="@style/ExpenseEditLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="3"
                    android:text="@string/statistics_mile"
                    android:textColor="?attr/list_heading" />

                <TextView
                    android:id="@+id/budgetMileText"
                    style="@style/ExpenseEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:hint="-" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>