<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/secondary_background"
    tools:context="${packageName}.${activityClass}" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentTop="true"
                android:background="@color/menu_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/normal_edit_item_bg"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/regNumberEdit"
                    style="@style/ExpenseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/add_vehicle_edit_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textCapCharacters"
                    android:maxLines="1" >

                    <requestFocus />
                </EditText>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/vehicle_title_add_vehicle_mileage"
                android:textColor="@color/header_foreground" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentTop="true"
                android:background="@color/menu_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_edit_item_bg"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/currentMileageEdit"
                    style="@style/ExpenseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/add_vehicle_current_mileage_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_edit_item_bg"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/annualMileageEdit"
                    style="@style/ExpenseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/add_vehicle_estimated_annual_mileage_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/vehicle_add_info"
            android:textColor="@color/header_foreground" />
    
    	</LinearLayout>
    	
    </ScrollView>
    
    <include layout="@layout/loading_layer"/>
    
</RelativeLayout>