<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/secondary_background"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/incidents_witness_details"
                android:textColor="@color/header_foreground" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/menu_divider" />

            <LinearLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_edit_item_bg"
                android:orientation="horizontal"
                android:weightSum="10" >

                <EditText
                    android:id="@+id/nameEdit"
                    style="@style/ExpenseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:hint="@string/incidents_witness_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:maxLines="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/numberLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_edit_item_bg"
                android:orientation="horizontal"
                android:weightSum="10" >

                <EditText
                    android:id="@+id/numberEdit"
                    style="@style/ExpenseEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:hint="@string/incidents_witness_number"
                    android:inputType="phone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_edit_item_bg"
                android:orientation="horizontal"
                android:weightSum="10" >

                <EditText
                    android:id="@+id/emailEdit"
                    style="@style/ExpenseEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical|center_horizontal"
                    android:hint="@string/incidents_witness_email"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <!--
                 <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_edit_item_bg"
                android:orientation="horizontal"
                android:weightSum="10" >

                <TextView
                    style="@style/ExpenseEditLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="3"
                    android:text="@string/expense_details_title_type" />

                <EditText
                    android:id="@+id/typeEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:text="Other"
                    android:hint="Parking"
                    style="@style/ExpenseEditText" />
            </LinearLayout>
            -->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/incidents_witness_statement"
                android:textColor="@color/header_foreground" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentTop="true"
                android:background="@color/menu_divider" />

            <EditText
                android:id="@+id/descEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:background="@drawable/normal_edit_item_bg" />

        </LinearLayout>

        <TextView
            android:id="@+id/infoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/incidents_info_request"
            android:textColor="@color/header_foreground" />

    </LinearLayout>

</ScrollView>